[package]
name = "ieee1609dot3codec-sys"
version = "0.1.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"]}
bindgen = "0.53"
syn = {version = "1.0", features = ["full", "printing"]}
